@@ -3,6 +3,7 @@ New 1.1.0 version:
     - give access to the SetParent to KaxSimpleBlock as well
     - change the placement of a MATROSKA_DLL_API so that it actually works
     - remove all references to the old/outdated/previous tag system
+    - add the possibility for a DataBuffer class to use its own internal memory
 
 2010-06-04 robux4/mosu
 New 1.0.0 version:
